--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -56,7 +56,7 @@
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   & a {
-    color: black;
+    // color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
