--- a/api/backend/templates/admin/index.html
+++ b/api/backend/templates/admin/index.html
@@ -6,6 +6,11 @@
 {% endblock %}
 {% block content %}
 <div class="dashboard">
+    <div class="mt-6 flex gap-4">
+    <a href="{% url 'export_excel' %}" class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+        Экспорт в Excel
+    </a>
+</div>
     <!-- Блоки статистики -->
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
         <!-- Тесты -->
